# logion-nfts

./: Cargo.toml  README.md  rust-toolchain.toml
contracts/art_nft_psp34/: Cargo.toml  lib.rs
logics/: Cargo.toml
logics/impls/: psp34_traits.rs
logics/traits/: error.rs  mod.rs  psp34_traits.rs
metadata/: README.md
